--- a/react_node_backend/package.json
+++ b/react_node_backend/package.json
@@ -9,17 +9,20 @@
     "client-sessions": "^0.8.0",
     "connect-mongo": "^2.0.1",
     "crypto": "^1.0.1",
-    "express": "^4.16.2",
+    "express": "^4.16.3",
     "express-session": "^1.15.6",
-    "kafka-node": "^2.4.1",
-    "mongoose": "^5.0.11",
+    "foreman": "^2.0.0",
+    "kafka-node": "^2.5.0",
+    "mongoose": "^5.0.14",
     "mongoose-auto-increment": "^5.0.1",
     "multiparty": "^4.1.3",
     "mysql": "^2.15.0",
+    "nodemon": "^1.17.3",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react": "^16.3.1",
+    "react-datepicker": "^1.4.1",
+    "react-dom": "^16.3.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
@@ -27,9 +30,7 @@
     "react-simple-pie-chart": "^0.5.0",
     "redux": "^3.7.2",
     "render-if": "^0.1.1",
-    "sweetalert2": "^7.15.0",
-    "nodemon": "^1.17.1",
-    "foreman": "^2.0.0"
+    "sweetalert2": "^7.18.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,6 +40,6 @@
     "test": "mocha"
   },
   "devDependencies": {
-    "mocha": "^5.0.4"
+    "mocha": "^5.0.5"
   }
 }
