--- a/kafka_backend/package.json
+++ b/kafka_backend/package.json
@@ -14,6 +14,7 @@
     "mongodb": "^2.2.31",
     "mongoose": "^5.0.12",
     "mongoose-auto-increment": "^5.0.1",
+    "mysql": "^2.15.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
   }
