--- a/react_node_backend/package.json
+++ b/react_node_backend/package.json
@@ -10,6 +10,7 @@
     "connect-mongo": "^2.0.1",
     "crypto": "^1.0.1",
     "express": "^4.16.3",
+    "express-mysql-session": "^1.3.0",
     "express-session": "^1.15.6",
     "foreman": "^2.0.0",
     "kafka-node": "^2.5.0",
@@ -29,9 +30,12 @@
     "react-scripts": "1.1.1",
     "react-select": "^1.2.1",
     "react-simple-pie-chart": "^0.5.0",
+    "redis": "^2.8.0",
     "redux": "^3.7.2",
     "render-if": "^0.1.1",
-    "sweetalert2": "^7.18.0"
+    "sweetalert": "^2.1.0",
+    "sweetalert2": "^7.18.0",
+    "winston": "^3.0.0-rc1"
   },
   "scripts": {
     "start": "react-scripts start",
