--- a/react_node_backend/package.json
+++ b/react_node_backend/package.json
@@ -30,6 +30,7 @@
     "react-scripts": "1.1.1",
     "react-select": "^1.2.1",
     "react-simple-pie-chart": "^0.5.0",
+    "recharts": "^1.0.0-beta.10",
     "redis": "^2.8.0",
     "redux": "^3.7.2",
     "render-if": "^0.1.1",
